[gd_scene load_steps=15 format=2]

[ext_resource path="res://source/Actors/Mouskie/Mouskie.gd" type="Script" id=2]
[ext_resource path="res://source/Actors/Mouskie/MouskieFSM.gd" type="Script" id=3]
[ext_resource path="res://assets/NPCs/Mouskie/mouskiesniffle-Sheet.png" type="Texture" id=4]
[ext_resource path="res://assets/NPCs/Mouskie/mouskie-Bounce-Sheet.png" type="Texture" id=5]

[sub_resource type="CapsuleShape2D" id=6]
radius = 3.0
height = 8.0

[sub_resource type="Animation" id=12]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("../MouskieSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}

[sub_resource type="Animation" id=7]
resource_name = "attack"
length = 1.28
step = 0.16
tracks/0/type = "value"
tracks/0/path = NodePath("../MouskieSprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 4 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("../MouskieSprite:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 8 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("../MouskieSprite:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.16, 0.32, 0.48, 0.64, 0.8, 0.96, 1.12 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7 ]
}

[sub_resource type="Animation" id=8]
resource_name = "chase"
length = 0.24
loop = true
step = 0.06
tracks/0/type = "value"
tracks/0/path = NodePath("../MouskieSprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 5 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("../MouskieSprite:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 4 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("../MouskieSprite:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.06, 0.12, 0.18 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3 ]
}

[sub_resource type="Animation" id=2]
resource_name = "idle"
length = 0.96
loop = true
step = 0.12
tracks/0/type = "value"
tracks/0/path = NodePath("../MouskieSprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 4 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("../MouskieSprite:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 8 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("../MouskieSprite:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.12, 0.24, 0.36, 0.48, 0.6, 0.72, 0.84 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7 ]
}

[sub_resource type="Animation" id=9]
resource_name = "walk"
length = 0.32
loop = true
step = 0.08
tracks/0/type = "value"
tracks/0/path = NodePath("../MouskieSprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 5 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("../MouskieSprite:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 4 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("../MouskieSprite:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.08, 0.16, 0.24 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3 ]
}

[sub_resource type="AnimationNodeStateMachine" id=4]

[sub_resource type="AnimationNodeStateMachinePlayback" id=5]

[sub_resource type="CircleShape2D" id=10]
radius = 105.005

[sub_resource type="CircleShape2D" id=11]
radius = 24.0

[node name="Mouskie" type="KinematicBody2D" groups=["POI"]]
script = ExtResource( 2 )

[node name="MouskieFSM" type="Node2D" parent="."]
script = ExtResource( 3 )

[node name="MouskieSprite" type="Sprite" parent="."]
texture = ExtResource( 4 )
hframes = 8

[node name="RCollision" type="CollisionShape2D" parent="."]
position = Vector2( 14, 15 )
rotation = 1.5708
shape = SubResource( 6 )

[node name="LCollision" type="CollisionShape2D" parent="."]
position = Vector2( -14, 15 )
rotation = 1.5708
shape = SubResource( 6 )
disabled = true

[node name="AnimationPlayers" type="Node2D" parent="."]

[node name="SpritePlayer" type="AnimationPlayer" parent="AnimationPlayers"]
autoplay = "idle"
anims/RESET = SubResource( 12 )
anims/attack = SubResource( 7 )
anims/chase = SubResource( 8 )
anims/idle = SubResource( 2 )
anims/walk = SubResource( 9 )

[node name="EffectsPlayer" type="AnimationPlayer" parent="AnimationPlayers"]

[node name="AnimationTree" type="AnimationTree" parent="AnimationPlayers"]
tree_root = SubResource( 4 )
anim_player = NodePath("../SpritePlayer")
parameters/playback = SubResource( 5 )

[node name="StateOutput" type="Label" parent="."]
margin_left = -58.0
margin_top = -36.0
margin_right = 58.0
margin_bottom = -22.0
text = "State"
align = 1
valign = 1

[node name="Sight" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Sight"]
modulate = Color( 0.556863, 0.0156863, 0.0901961, 1 )
shape = SubResource( 10 )

[node name="Threat" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Threat"]
modulate = Color( 1, 0, 0, 1 )
shape = SubResource( 11 )
disabled = true

[node name="Timers" type="Node2D" parent="."]

[node name="idleTimer" type="Timer" parent="Timers"]
wait_time = 2.88
one_shot = true

[node name="attackTimer" type="Timer" parent="Timers"]
wait_time = 1.6
one_shot = true

[connection signal="area_entered" from="Sight" to="." method="_on_Sight_area_entered"]
[connection signal="area_exited" from="Sight" to="." method="_on_Sight_area_exited"]
[connection signal="area_entered" from="Threat" to="." method="_on_Threat_area_entered"]
[connection signal="area_exited" from="Threat" to="." method="_on_Threat_area_exited"]
